# pazuauto

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  make.py
automation/: .gitignore  config.py  gui.py  location.py  main.py  opencv.py  requirement.txt
automation/src/: automation.py  gui.py  location.py  opencv.py  pazusoba.py  skill.py  utils.py
cdll/: CMakeLists.txt  class.cpp  class.py  library.cpp  main.py  pazusoba.py  sort.cpp  sort.py
